# git-credential-email

./: CNAME  Privacy Policy.md  README.md  git-credential-aol  git-credential-gmail  git-credential-msgrpah  git-credential-outlook  git-credential-protonmail  git-credential-yahoo  git-msgraph  git-protonmail
.github/workflows/: delete.yml  release.yml
fedora/: git-credential-aol.spec  git-credential-gmail.spec  git-credential-outlook.spec  git-credential-yahoo.spec  git-msgraph.spec  git-protonmail.spec  python-pgpy.spec
git-credential-aol/: pyproject.toml
git-credential-aol/src/git_credential_aol/: git-credential-aol.py
git-credential-gmail/: pyproject.toml
git-credential-gmail/src/git_credential_gmail/: git-credential-gmail.py
git-credential-outlook/: pyproject.toml
git-credential-outlook/src/git_credential_outlook/: git-credential-outlook.py
git-credential-yahoo/: pyproject.toml
git-credential-yahoo/src/git_credential_yahoo/: git-credential-yahoo.py
git-msgraph/: pyproject.toml
git-msgraph/src/git_msgraph/: git-msgraph.py
git-protonmail/: pyproject.toml
git-protonmail/src/git_protonmail/: git-protonmail.py
rpm/: git-credential-aol.spec  git-credential-gmail.spec  git-credential-outlook.spec  git-credential-yahoo.spec  git-msgraph.spec  git-protonmail.spec  python-pgpy.spec
rpm/fedora/: git-credential-aol.spec  git-credential-yahoo.spec  git-msgraph.spec  python-pgpy.spec
src/git-credential-yahoo/src/git_credential_yahoo/: git-credential-yahoo.py
