[build-system]
requires = ["setuptools >= 61", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "git-protonmail"
dynamic = ["version"]
description = "Git helper to use ProtonMail API to send emails"
requires-python = ">=3.10"
authors=[{name = "Aditya Garg", email = "gargaditya08@live.com"}]
dependencies = [
  "bcrypt",
  "cryptography",
  "keyring",
  "PGPy13" ,
  "requests",
  "requests-toolbelt",
  "typing-extensions"
]
license="GPL-3.0-only"

[project.optional-dependencies]
autosolve = [
  "numpy", 
  "opencv-python"
]
qt = [
  "PyQt6 >= 6.0",
  "PyQt6-WebEngine >= 6.0"
]

[project.scripts]
git-protonmail = "git_protonmail:main"

[project.urls]
Homepage = "https://gce.adityagarg.is-a.dev"
Repository = "https://github.com/AdityaGarg8/git-credential-email"
Issues = "https://github.com/AdityaGarg8/git-credential-email/issues"
Funding = "https://www.buymeacoffee.com/gargadityav"

[tool.setuptools_scm]
root = "../.."
